ver 0.02 links and most apps

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "Y:/MyStuff/CanIHazLinks/index.html",
+            "url": "file:///Y:/git/CanIHazLinks/index.html",
             "webRoot": "${workspaceFolder}"
         }
     ]
